WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283115
REGRESSION (
283298@main
): GitHub.com: checks run have condensed UI and not expanded to area in STP207 compared to Safari 18.1
https://bugs.webkit.org/show_bug.cgi?id=283115
Summary
REGRESSION (283298@main): GitHub.com: checks run have condensed UI and not ex...
Ahmad Saleem
Reported
2024-11-14 08:47:49 PST
Created
attachment 473225
[details]
Safari 18.1 vs STP207 Hi Team, While going through GitHub PR's, I stumbled upon an layout issue. Baseline: You need to be logged in. *** Steps to Reproduce *** 1) Go to GitHub PR with failing tests (e.g.,
https://github.com/WebKit/WebKit/pull/19308
) ^ I deliberately picked old PR, which does not have chances to be updated. 2) Look at `checks` area *** Expected Result *** Scrollbar should be next to container and not condensed *** Actual Result *** Scrollbar is not next to container and is condensed. ___ Just raising so we can fix it.
Attachments
Safari 18.1 vs STP207
(675.31 KB, image/png)
2024-11-14 08:47 PST
,
Ahmad Saleem
no flags
Details
Test reduction
(415 bytes, text/html)
2024-11-14 10:07 PST
,
alan
no flags
Details
[fast-cq]Patch
(3.83 KB, patch)
2024-11-14 20:17 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-14 08:48:01 PST
<
rdar://problem/139882323
>
alan
Comment 2
2024-11-14 10:07:33 PST
Created
attachment 473229
[details]
Test reduction
alan
Comment 3
2024-11-14 19:52:26 PST
This is a very edge case of when we've got a float box at a certain y position that our box needs to avoid but this float is actually has zero margin box width (non-zero border box with large enough negative margin) so our box is not constrained by it at all.
alan
Comment 4
2024-11-14 20:17:13 PST
Created
attachment 473233
[details]
[fast-cq]Patch
EWS
Comment 5
2024-11-15 07:40:51 PST
Committed
286637@main
(4e3542612b56): <
https://commits.webkit.org/286637@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473233
[details]
.
EWS
Comment 6
2024-11-18 17:47:04 PST
Committed
283286.492@safari-7620-branch
(33b2af279a87): <
https://commits.webkit.org/283286.492@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2299 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug