REGRESSION (283298@main): GitHub.com: checks run have condensed UI and not expanded to area in STP207 compared to Safari 18.1 https://bugs.webkit.org/show_bug.cgi?id=283115 <rdar://problem/139882323>

Reviewed by Antti Koivisto.

When there's no float to avoid (in this there's a float on this logical top position, but with zero margin width), our logical width is the same as
if there was no float at all.

* LayoutTests/fast/block/float/zero-margin-box-float-overlap-expected.html: Added.
* LayoutTests/fast/block/float/zero-margin-box-float-overlap.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::shrinkLogicalWidthToAvoidFloats const):

Canonical link: https://commits.webkit.org/286637@main