Source/WebCore/rendering/RenderBox.cpp
@@ -2259,6 +2259,10 @@ LayoutUnit RenderBox::shrinkLogicalWidthToAvoidFloats(LayoutUnit childMarginStar
 
     LayoutUnit logicalHeight = cb.logicalHeightForChild(*this);
     LayoutUnit availableLogicalWidthAtLogicalTopPosition = cb.availableLogicalWidthForLineInFragment(logicalTopPosition, containingBlockFragment, logicalHeight);
+    if (availableLogicalWidthAtLogicalTopPosition == cb.availableLogicalWidth()) {
+        // No float to avoid at this logical top position either becasue float's margin box is shrunk to 0 (non-zero border box with large enough margins) or no float at all.
+        return availableLogicalWidthAtLogicalTopPosition - childMarginStart - childMarginEnd;
+    }
     // We need to see if margins on either the start side or the end side can contain the floats in question. If they can,
     // then just using the line width is inaccurate. In the case where a float completely fits, we don't need to use the line
     // offset at all, but can instead push all the way to the content edge of the containing block. In the case where the float
